Thu Jun 24 18:03:46 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Added success report for Slackware Linux 9.1.

Mon Jun 21 16:33:16 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Corrected -> to . so code
	  compiles with debug enabled.

Mon Jun 21 03:25:24 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Eliminated two calls to abort() - throw
	  exceptions instead.

Mon Jun 21 03:21:14 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Finish backing out incorrect
	  change from "Fri May 07 03:16:29 BST 2004" - failed to change two
	  lines back before.

Fri Jun 18 16:48:10 BST 2004  Richard Boulton <richard@tartarus.org>

	* configure.in: Fix typo (STLPORT_CXXLAGS -> STLPORT_CXXFLAGS)

Thu Jun 17 03:46:32 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Cleaned up code to track
	  add vs delete vs modify of a posting list entry since we now
	  force a flush if an entry is about to be retouched.

Thu Jun 17 03:44:21 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Back out incorrect change from
	  "Fri May 07 03:16:29 BST 2004".  We do need to call get_or_make_tag
	  in this case because we're modifying the tag.

Wed Jun 16 15:40:21 BST 2004  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.h: Implemented get_lastdocid()
	  for InMemory backend.

Wed Jun 16 02:39:41 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Note the value of LIBRARY_VERSION_INFO which 0.8.1
	  would get if it were released now.

Wed Jun 16 02:39:11 BST 2004  Robert Pollak <robert.pollak@fabasoft.com>

	* api/omdatabase.cc, include/xapian/database.h,
	  backends/database.cc, common/database.h,
	  backends/quartz/quartz_database.cc, backends/quartz/quartz_database.h,
	  backends/quartz/quartz_record.cc, backends/quartz/quartz_record.h:
	  New method Database::get_lastdocid for re-synchronizing an old
	  quartz index.
