@@ -474,6 +474,38 @@ There are a few exceptions, such as MSetIterator and ESetIterator which have an
 exposed implementation.  Tests show this makes a substantial difference to
 speed (it's ~20% faster) in typical cases of iterator use.
 
+The postfix operator++ for iterators should be implemented inline in terms
+of the prefix form as described by Joe Buck on the gcc mailing list
+- excerpt from http://article.gmane.org/gmane.comp.gcc.devel:50201 :
+
+    class some_iterator {
+    public:
+        // ...
+        some_iterator& operator++();
+    
+        some_iterator operator++(int) {
+    	some_iterator tmp = *this;
+    	operator++();
+    	return tmp;
+        }
+    };
+
+    The compiler is allowed to assume that the copy constructor only does
+    a copy, and to optimize away unneeded copy operations.  The result
+    in this case should be that, for some_iterator above, using the
+    postfix operator without using the result should give code equivalent
+    to using the prefix operator.
+    
+    Now, for the currently released GCC, you'll find that the dead uses
+    of tmp are only completely optimized away if tmp has only one data
+    member that can fit in a register.  tree-ssa (now in the trunk) does
+    better, and you should find that this style comes very close to
+    eliminating any penalty from "incorrect" use of the postfix form.
+
+The "currently release GCC" Joe refers to is 3.4.0; tree-ssa will be in
+3.5.0.  Xapian's PostingIterator, TermIterator, and PositionIterator all have
+only one data member which fits in a register.
+
 How to make a release
 =====================
 
