@@ -2,7 +2,7 @@
  *
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2003 Olly Betts
+ * Copyright 2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -73,24 +73,13 @@ Xapian::PostingIterator::operator *() const
 Xapian::PostingIterator &
 Xapian::PostingIterator::operator++()
 {
-    DEBUGAPICALL(Xapian::PostingIterator &, "Xapian::PostingIterator::operator++", "");
+    DEBUGAPICALL(void, "Xapian::PostingIterator::operator++", "");
     Assert(internal.get());
     Assert(!internal->at_end());
     Internal *p = internal->next();
     if (p) internal = p; // handle prune
     if (internal->at_end()) internal = 0;
-    RETURN(*this);
-}
-
-void
-Xapian::PostingIterator::operator++(int)
-{
-    DEBUGAPICALL(void, "Xapian::PostingIterator::operator++", "int");
-    Assert(internal.get());
-    Assert(!internal->at_end());
-    Internal *p = internal->next();
-    if (p) internal = p; // handle prune
-    if (internal->at_end()) internal = 0;
+    return *this;
 }
 
 // extra method, not required to be an input_iterator
