@@ -4,7 +4,7 @@
 /* ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -67,14 +67,17 @@ class ValueIterator {
 	    doc = other.doc;
 	}
 
-	/// Advance the iterator
+	/// Advance the iterator.
 	ValueIterator & operator++() {
 	    ++index;
 	    return *this;
 	}
 
-	void operator++(int) {
+	/// Advance the iterator (postfix variant).
+	ValueIterator operator++(int) {
+	    ValueIterator tmp = *this;
 	    ++index;
+	    return tmp;
 	}
 
 	/// Get the value for the current position.
